adicionando favicon no site

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PETS</title>
+    <link rel="shortcut icon" href="img/icons8-pata-ios-16-filled-32.png" type="image/x-icon">
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
@@ -19,9 +21,9 @@
         <nav id="cabecalho">
             <div id="cabecalhotext">
                 <img id="iconpata" src="img/icons8-pata-ios-16-filled-32.png" alt="iconpata">
-                <a class="textoCabecalho">HOME</a>
-                <a class="textoCabecalho">CATEGORIAS</a>
-                <a class="textoCabecalho">BLOG</a>
+                <a href="#telainicial" class="textoCabecalho">HOME</a>
+                <a href="#categorias" class="textoCabecalho">CATEGORIAS</a>
+                <a href="#blogger" class="textoCabecalho">BLOG</a>
                 <a class="textoCabecalho">CONTATO</a>
             </div>
             <div id="iconescabecalho">
